--- a/settingsdlg.ui
+++ b/settingsdlg.ui
@@ -1472,17 +1472,52 @@ p, li { white-space: pre-wrap; }
             </widget>
            </item>
            <item>
-            <spacer name="horizontalSpacer_10">
+            <widget class="Line" name="line">
              <property name="orientation">
-              <enum>Qt::Horizontal</enum>
+              <enum>Qt::Vertical</enum>
              </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="lblAdblockTotalRules">
+             <property name="text">
+              <string>TextLabel</string>
              </property>
-            </spacer>
+            </widget>
+           </item>
+           <item>
+            <widget class="Line" name="line_4">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_36">
+             <property name="text">
+              <string>&amp;Whitelist cache size</string>
+             </property>
+             <property name="buddy">
+              <cstring>spinMaxWhiteListItems</cstring>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="spinMaxWhiteListItems">
+             <property name="minimum">
+              <number>10</number>
+             </property>
+             <property name="maximum">
+              <number>100000</number>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="Line" name="line_3">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+            </widget>
            </item>
            <item>
             <widget class="QPushButton" name="buttonAdImport">
@@ -1918,6 +1953,7 @@ p, li { white-space: pre-wrap; }
   <tabstop>checkUseAd</tabstop>
   <tabstop>buttonAdAdd</tabstop>
   <tabstop>buttonAdDel</tabstop>
+  <tabstop>spinMaxWhiteListItems</tabstop>
   <tabstop>buttonAdImport</tabstop>
   <tabstop>buttonAdExport</tabstop>
   <tabstop>tableCookies</tabstop>
