--- a/main.ui
+++ b/main.ui
@@ -97,7 +97,7 @@
      <x>0</x>
      <y>0</y>
      <width>883</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -112,6 +112,7 @@
     <addaction name="actionOpen"/>
     <addaction name="actionOpenClip"/>
     <addaction name="actionOpenInDir"/>
+    <addaction name="actionSave"/>
     <addaction name="separator"/>
     <addaction name="actionRecentDocuments"/>
     <addaction name="separator"/>
@@ -196,16 +197,28 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionAbout">
+   <property name="icon">
+    <iconset theme="help-about">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
    <property name="text">
     <string>&amp;About</string>
    </property>
   </action>
   <action name="actionSettings">
+   <property name="icon">
+    <iconset theme="configure">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
    <property name="text">
     <string>&amp;Settings...</string>
    </property>
   </action>
   <action name="actionExit">
+   <property name="icon">
+    <iconset theme="application-exit">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
    <property name="text">
     <string>E&amp;xit</string>
    </property>
@@ -214,6 +227,10 @@
    </property>
   </action>
   <action name="actionOpen">
+   <property name="icon">
+    <iconset theme="document-open">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
    <property name="text">
     <string>&amp;Open...</string>
    </property>
@@ -222,11 +239,19 @@
    </property>
   </action>
   <action name="actionOpenInDir">
+   <property name="icon">
+    <iconset theme="document-open-folder">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
    <property name="text">
     <string>Open &amp;in document directory...</string>
    </property>
   </action>
   <action name="actionNew">
+   <property name="icon">
+    <iconset theme="document-new">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
    <property name="text">
     <string>&amp;New</string>
    </property>
@@ -235,6 +260,10 @@
    </property>
   </action>
   <action name="actionOpenCB">
+   <property name="icon">
+    <iconset theme="edit-paste">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
    <property name="text">
     <string>&amp;Paste</string>
    </property>
@@ -243,11 +272,19 @@
    </property>
   </action>
   <action name="actionClearCB">
+   <property name="icon">
+    <iconset theme="edit-clear">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
    <property name="text">
     <string>&amp;Clear clipboard</string>
    </property>
   </action>
   <action name="actionOpenClip">
+   <property name="icon">
+    <iconset theme="document-open-remote">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
    <property name="text">
     <string>Open with &amp;Url from clipboard</string>
    </property>
@@ -258,6 +295,10 @@
    </property>
   </action>
   <action name="actionWnd">
+   <property name="icon">
+    <iconset theme="window-new">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
    <property name="text">
     <string>New &amp;window</string>
    </property>
@@ -297,6 +338,10 @@
    </property>
   </action>
   <action name="actionTextTranslator">
+   <property name="icon">
+    <iconset theme="document-edit-verify">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
    <property name="text">
     <string>T&amp;ext translator</string>
    </property>
@@ -313,6 +358,10 @@
    </property>
   </action>
   <action name="actionExitAll">
+   <property name="icon">
+    <iconset theme="application-exit">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
    <property name="text">
     <string>&amp;Exit and close all</string>
    </property>
@@ -426,8 +475,24 @@
    </property>
   </action>
   <action name="actionPrintPDF">
+   <property name="icon">
+    <iconset theme="document-print">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
    <property name="text">
-    <string>Print to PDF...</string>
+    <string>&amp;Print to PDF...</string>
+   </property>
+  </action>
+  <action name="actionSave">
+   <property name="icon">
+    <iconset theme="document-save">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
+   <property name="text">
+    <string>&amp;Save...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
    </property>
   </action>
  </widget>
