--- a/settingsdlg.ui
+++ b/settingsdlg.ui
@@ -204,6 +204,12 @@
                  <verstretch>0</verstretch>
                 </sizepolicy>
                </property>
+               <property name="maximumSize">
+                <size>
+                 <width>600</width>
+                 <height>16777215</height>
+                </size>
+               </property>
                <property name="editable">
                 <bool>true</bool>
                </property>
