--- a/bookmarks.ui
+++ b/bookmarks.ui
@@ -6,46 +6,64 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>758</width>
-    <height>450</height>
+    <width>806</width>
+    <height>402</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Bookmarks</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <spacer>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>252</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="0" column="1">
-    <widget class="QLineEdit" name="search"/>
-   </item>
-   <item row="1" column="0" colspan="2">
-    <widget class="EditTreeView" name="tree"/>
-   </item>
-   <item row="2" column="0" colspan="2">
-    <layout class="QHBoxLayout">
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QPushButton" name="removeButton">
+      <spacer>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>252</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QLabel" name="label">
        <property name="text">
-        <string>&amp;Remove</string>
+        <string>Search</string>
        </property>
       </widget>
      </item>
      <item>
+      <widget class="QLineEdit" name="search"/>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="EditTreeView" name="tree"/>
+   </item>
+   <item>
+    <layout class="QHBoxLayout">
+     <item>
       <widget class="QPushButton" name="addFolderButton">
        <property name="text">
         <string>Add Folder</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="addSeparatorButton">
+       <property name="text">
+        <string>Add Separator</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="removeButton">
+       <property name="text">
+        <string>&amp;Remove</string>
        </property>
       </widget>
      </item>
@@ -63,9 +81,12 @@
       </spacer>
      </item>
      <item>
-      <widget class="QDialogButtonBox" name="buttonBox">
-       <property name="standardButtons">
-        <set>QDialogButtonBox::Ok</set>
+      <widget class="QPushButton" name="closeButton">
+       <property name="text">
+        <string>Close</string>
+       </property>
+       <property name="default">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -80,21 +101,28 @@
    <header>edittreeview.h</header>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>search</tabstop>
+  <tabstop>tree</tabstop>
+  <tabstop>addFolderButton</tabstop>
+  <tabstop>addSeparatorButton</tabstop>
+  <tabstop>removeButton</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
-   <sender>buttonBox</sender>
-   <signal>accepted()</signal>
+   <sender>closeButton</sender>
+   <signal>clicked()</signal>
    <receiver>BookmarksDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>472</x>
-     <y>329</y>
+     <x>731</x>
+     <y>370</y>
     </hint>
     <hint type="destinationlabel">
-     <x>461</x>
-     <y>356</y>
+     <x>595</x>
+     <y>380</y>
     </hint>
    </hints>
   </connection>
