--- a/settingsdlg.ui
+++ b/settingsdlg.ui
@@ -1239,6 +1239,54 @@ p, li { white-space: pre-wrap; }
          </item>
         </layout>
        </widget>
+       <widget class="QWidget" name="page">
+        <layout class="QVBoxLayout" name="verticalLayout_5">
+         <item>
+          <widget class="QTableView" name="listTransDirections">
+           <property name="selectionMode">
+            <enum>QAbstractItemView::SingleSelection</enum>
+           </property>
+           <property name="gridStyle">
+            <enum>Qt::DotLine</enum>
+           </property>
+           <property name="wordWrap">
+            <bool>false</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_10">
+           <item>
+            <widget class="QPushButton" name="buttonAddTrDir">
+             <property name="text">
+              <string>Add</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer_3">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item>
+            <widget class="QPushButton" name="buttonDelTrDir">
+             <property name="text">
+              <string>Delete</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </widget>
        <widget class="QWidget" name="tab">
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
@@ -1874,6 +1922,9 @@ p, li { white-space: pre-wrap; }
   <tabstop>buttonEditor</tabstop>
   <tabstop>editScpHost</tabstop>
   <tabstop>editScpParams</tabstop>
+  <tabstop>listTransDirections</tabstop>
+  <tabstop>buttonAddTrDir</tabstop>
+  <tabstop>buttonDelTrDir</tabstop>
   <tabstop>listQr</tabstop>
   <tabstop>buttonDelQr</tabstop>
   <tabstop>listHistory</tabstop>
