Live updating from local search engine.

--- a/searchtab.ui
+++ b/searchtab.ui
@@ -157,6 +157,19 @@
     </widget>
    </item>
    <item>
+    <widget class="QProgressBar" name="searchBar">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>15</height>
+      </size>
+     </property>
+     <property name="maximum">
+      <number>0</number>
+     </property>
+    </widget>
+   </item>
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
       <widget class="QLabel" name="label_6">
