--- a/settingsdlg.ui
+++ b/settingsdlg.ui
@@ -34,7 +34,7 @@
         <number>0</number>
        </property>
        <widget class="QWidget" name="widget">
-        <layout class="QHBoxLayout" name="horizontalLayout_35">
+        <layout class="QHBoxLayout" name="horizontalLayout_37">
          <item>
           <widget class="QGroupBox" name="groupBox_2">
            <property name="title">
@@ -94,74 +94,206 @@
           </widget>
          </item>
          <item>
-          <layout class="QVBoxLayout" name="verticalLayout_22">
+          <layout class="QVBoxLayout" name="verticalLayout_28">
            <item>
-            <spacer name="verticalSpacer_17">
+            <spacer name="verticalSpacer_8">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
-               <height>17</height>
+               <height>40</height>
               </size>
              </property>
             </spacer>
            </item>
            <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_19">
+            <layout class="QHBoxLayout" name="horizontalLayout_36">
              <item>
-              <widget class="QLabel" name="label_32">
-               <property name="text">
-                <string>Max &amp;recent items</string>
+              <widget class="QGroupBox" name="groupBox_11">
+               <property name="title">
+                <string>PDF converter</string>
                </property>
-               <property name="buddy">
-                <cstring>spinMaxRecent</cstring>
-               </property>
+               <layout class="QVBoxLayout" name="verticalLayout_27">
+                <item>
+                 <widget class="QCheckBox" name="checkPdfExtractImages">
+                  <property name="toolTip">
+                   <string>Extracts images from PDF streams (JPEG and PNG) to embedded data-url</string>
+                  </property>
+                  <property name="text">
+                   <string>Extract images</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <layout class="QHBoxLayout" name="horizontalLayout_35">
+                  <item>
+                   <widget class="QLabel" name="label_25">
+                    <property name="text">
+                     <string>&amp;JPEG quality</string>
+                    </property>
+                    <property name="buddy">
+                     <cstring>spinPdfImageQuality</cstring>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QSpinBox" name="spinPdfImageQuality">
+                    <property name="suffix">
+                     <string> %</string>
+                    </property>
+                    <property name="minimum">
+                     <number>5</number>
+                    </property>
+                    <property name="maximum">
+                     <number>100</number>
+                    </property>
+                    <property name="value">
+                     <number>75</number>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </item>
+                <item>
+                 <layout class="QHBoxLayout" name="horizontalLayout_32">
+                  <item>
+                   <widget class="QLabel" name="label_34">
+                    <property name="text">
+                     <string>&amp;Max image size</string>
+                    </property>
+                    <property name="buddy">
+                     <cstring>spinPdfImageMaxSize</cstring>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QSpinBox" name="spinPdfImageMaxSize">
+                    <property name="suffix">
+                     <string> px</string>
+                    </property>
+                    <property name="minimum">
+                     <number>10</number>
+                    </property>
+                    <property name="maximum">
+                     <number>9999</number>
+                    </property>
+                    <property name="value">
+                     <number>250</number>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </item>
+                <item>
+                 <spacer name="verticalSpacer_17">
+                  <property name="orientation">
+                   <enum>Qt::Vertical</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>20</width>
+                    <height>40</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+               </layout>
               </widget>
              </item>
              <item>
-              <widget class="QSpinBox" name="spinMaxRecent"/>
-             </item>
-            </layout>
-           </item>
-           <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_12">
-             <item>
-              <widget class="QLabel" name="label_12">
-               <property name="text">
-                <string>M&amp;ax recycled items</string>
+              <widget class="QGroupBox" name="groupBox_10">
+               <property name="title">
+                <string>History limits</string>
                </property>
-               <property name="buddy">
-                <cstring>spinMaxRecycled</cstring>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QSpinBox" name="spinMaxRecycled"/>
-             </item>
-            </layout>
-           </item>
-           <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_13">
-             <item>
-              <widget class="QLabel" name="label_13">
-               <property name="text">
-                <string>Max history &amp;items</string>
-               </property>
-               <property name="buddy">
-                <cstring>spinMaxHistory</cstring>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QSpinBox" name="spinMaxHistory">
-               <property name="maximum">
-                <number>100000</number>
-               </property>
-               <property name="value">
-                <number>5000</number>
-               </property>
+               <layout class="QVBoxLayout" name="verticalLayout_22">
+                <item>
+                 <layout class="QHBoxLayout" name="horizontalLayout_19">
+                  <item>
+                   <widget class="QLabel" name="label_32">
+                    <property name="text">
+                     <string>&amp;Recent items</string>
+                    </property>
+                    <property name="buddy">
+                     <cstring>spinMaxRecent</cstring>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QSpinBox" name="spinMaxRecent"/>
+                  </item>
+                 </layout>
+                </item>
+                <item>
+                 <layout class="QHBoxLayout" name="horizontalLayout_12">
+                  <item>
+                   <widget class="QLabel" name="label_12">
+                    <property name="text">
+                     <string>R&amp;ecycled items</string>
+                    </property>
+                    <property name="buddy">
+                     <cstring>spinMaxRecycled</cstring>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QSpinBox" name="spinMaxRecycled"/>
+                  </item>
+                 </layout>
+                </item>
+                <item>
+                 <layout class="QHBoxLayout" name="horizontalLayout_13">
+                  <item>
+                   <widget class="QLabel" name="label_13">
+                    <property name="text">
+                     <string>History &amp;items</string>
+                    </property>
+                    <property name="buddy">
+                     <cstring>spinMaxHistory</cstring>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QSpinBox" name="spinMaxHistory">
+                    <property name="maximum">
+                     <number>100000</number>
+                    </property>
+                    <property name="value">
+                     <number>5000</number>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </item>
+                <item>
+                 <layout class="QHBoxLayout" name="horizontalLayout_22">
+                  <item>
+                   <widget class="QLabel" name="label_29">
+                    <property name="text">
+                     <string>Dis&amp;k cache size</string>
+                    </property>
+                    <property name="buddy">
+                     <cstring>spinCacheSize</cstring>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QSpinBox" name="spinCacheSize">
+                    <property name="specialValueText">
+                     <string>Auto</string>
+                    </property>
+                    <property name="suffix">
+                     <string> Mb</string>
+                    </property>
+                    <property name="maximum">
+                     <number>999</number>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </item>
+               </layout>
               </widget>
              </item>
             </layout>
@@ -197,34 +329,7 @@
             </layout>
            </item>
            <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_22">
-             <item>
-              <widget class="QLabel" name="label_29">
-               <property name="text">
-                <string>Dis&amp;k cache size</string>
-               </property>
-               <property name="buddy">
-                <cstring>spinCacheSize</cstring>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QSpinBox" name="spinCacheSize">
-               <property name="specialValueText">
-                <string>Auto</string>
-               </property>
-               <property name="suffix">
-                <string> Mb</string>
-               </property>
-               <property name="maximum">
-                <number>999</number>
-               </property>
-              </widget>
-             </item>
-            </layout>
-           </item>
-           <item>
-            <spacer name="verticalSpacer_18">
+            <spacer name="verticalSpacer_5">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
@@ -1865,6 +1970,9 @@ p, li { white-space: pre-wrap; }
   <tabstop>checkIgnoreSSLErrors</tabstop>
   <tabstop>checkLogNetworkRequests</tabstop>
   <tabstop>checkJSLogConsole</tabstop>
+  <tabstop>checkPdfExtractImages</tabstop>
+  <tabstop>spinPdfImageQuality</tabstop>
+  <tabstop>spinPdfImageMaxSize</tabstop>
   <tabstop>spinMaxRecent</tabstop>
   <tabstop>spinMaxRecycled</tabstop>
   <tabstop>spinMaxHistory</tabstop>
