--- a/searchtab.ui
+++ b/searchtab.ui
@@ -130,6 +130,9 @@
       <property name="sortingEnabled">
        <bool>true</bool>
       </property>
+      <property name="wordWrap">
+       <bool>false</bool>
+      </property>
       <property name="cornerButtonEnabled">
        <bool>false</bool>
       </property>
