--- a/snviewer.ui
+++ b/snviewer.ui
@@ -385,16 +385,36 @@ Long press forces subsentences mode.</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QLabel" name="lblWaitMessage">
-        <property name="font">
-         <font>
-          <pointsize>10</pointsize>
-         </font>
+       <layout class="QVBoxLayout" name="vboxLabelsLayout">
+        <property name="spacing">
+         <number>2</number>
         </property>
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
+        <item>
+         <widget class="QLabel" name="lblWaitMessage">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>TextLabel</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="lblWaitLanguage">
+          <property name="text">
+           <string>TextLabel</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
       <item>
        <widget class="QProgressBar" name="barWaitProgress">
